...
        android:text="Sign Up" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account? Login" />


</LinearLayout>

