...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toTopOf="@+id/association"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit"
        android:layout_width="62dp"
        android:layout_height="33dp"
        android:onClick="editProfile"
        android:text="Edit"
        android:textAlignment="center"
        android:textSize="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toEndOf="@+id/username"
...
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendCount"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/inviteFriends"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Invite"
        android:textSize="24sp"
        android:onClick="invite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
...
